# SnakeAI

./: .gitignore  CMakeLists.txt  default.nix  flake.nix
src/: main.cpp  snake_ai.cpp  snake_ai.h
src/gui/: gui.cpp
src/snake/: apple.cpp  apple.h  game_settings.h  snake.cpp  snake.h
